[package]
name = "matrix-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
eyeball = "0.8.8"
futures-util = "0.3.31"
matrix-sdk = { version = "0.8.0", features = ["anyhow"] }
matrix-sdk-ui = "0.8.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
